--- a/frontend/src/styles/objectifs.css
+++ b/frontend/src/styles/objectifs.css
@@ -102,6 +102,68 @@ p {
     align-items: center;
 }
 
-#img_oeil {
-    size: 1px
+.popup-content {
+    margin: auto;
+    background-color: #a09f9f;
+    border-radius: 10px;
+    width: 70%;
+    padding: 5px;
+    background-blend-mode: darken;
+  }
+  .popup-arrow {
+    color: #a09f9f;
+  }
+  [role='tooltip'].popup-content {
+    width: 200px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 3px;
+  }
+  .popup-overlay {
+    background: rgba(0, 0, 0, 0.5);
+  }
+  [data-popup='tooltip'].popup-overlay {
+    background: transparent;
+  }
+
+.switch {
+	display: inline-block;
+	position: relative;
+	width: 70px;
+	height: 40px;
+	cursor: pointer;
+	overflow: hidden;
+}
+.switch input {
+	position: absolute;
+	top: -30px;
+	left: -30px;
+	width: 0;
+	height: 0;
+}
+.switch input + span {
+    position: absolute;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   background: #df9999;
+   border-radius: 20px;
+}
+.switch input:checked + span {
+	background: #bf3434;
+}
+.switch input + span:before {
+	content: "";
+	display: inline-block;
+	position: absolute;
+	top: 50%;
+	left: 4px;
+	width: 32px;
+	height: 32px;
+	background: white;
+	border-radius: 50%;
+	transform: translateY(-50%);
+	transition: all .5s;
+}
+.switch input:checked + span:before {
+	left: 34px;
 }
