US06 envoi des données du formulaire vers la DB

--- a/frontend/src/styles/objectifs.css
+++ b/frontend/src/styles/objectifs.css
@@ -102,6 +102,10 @@ p {
     align-items: center;
 }
 
+
+#img_oeil {
+    size: 1px
+}
 .popup-content {
     margin: auto;
     background-color: #a09f9f;
