BUG (cookie): change redirection
L'utilisateur non connecté a accès à des pages qui lui sont normalement
innaccessible.

Etapes à suivre pour reproduire le bug :
-1) ne pas être connecté
-2) modifier l'url pour essayer de joindre une page accessible qu'aux
utilisateurs connecté (par exemple : /profil)
-3) vous avez accès à la page

Comportement attendu, vous êtes redirigé vers la page /inscription.

--- a/frontend/src/styles/default.css
+++ b/frontend/src/styles/default.css
@@ -26,9 +26,28 @@
 }
 
 .bienvenue_text {
-    color: #52a2fa
+    font-size: 3em;
+    color: #b9b9b9
 }
 
 a {
     border: none;
+}
+.div_video {
+    background-color: #3d3939;
+    position: absolute;
+    top: 12%;
+    left: 15%;
+    width: 1000px;
+
+}
+
+.video {
+    width: 100%;
+}
+
+html, body 
+{ 
+ height: 100%;
+ overflow: hidden
 }
