Rajout d’un affichage des données du raspberry pi + Ajout de test end2end + ajout de nouvelle route + style css
Ajout d’une nouvelle page (dataRasp) pour afficher les données persos du rasperry pi (cette page utilise les composants Fichier et Affichage)
Ajout d’une nouvelle route pour récupérer les données à afficher sur la nouvelle page.
Ajout de test end2end avec cypress qui test le fonctionnement des follows, d’ajout d’objectif, et la modification d’objectif.

[US17]:(https://github.com/zCargan/Projet-int-gration/wiki/US17-:-En-tant-qu'utilisateur-connect%C3%A9,-j'aimerais-pouvoir-voir-les-informations-personnelles-que-ma-montre-connect%C3%A9e-r%C3%A9cup%C3%A8re.)

--- a/frontend/src/styles/profilUser.css
+++ b/frontend/src/styles/profilUser.css
@@ -47,3 +47,19 @@
     margin-bottom: 10px;
 }
 
+.fa-circle-plus {
+    font-size: 2rem;
+    color: #3d3939;
+    background-color: #d9d9d9;
+    transition: all 0.3s ease-out;
+    border-radius: 110%;
+    position: absolute;
+    bottom: 0.5%;
+    right: 0.5%;
+}
+
+.fa-circle-plus:hover {
+    color: #000000;
+    background-color: #3d3939;
+    cursor: pointer;
+}
